without live email and without payment feature, it is now ready to deploy

--- a/views/base.pug
+++ b/views/base.pug
@@ -25,5 +25,6 @@ html
 
     //- If you need external scripts from CDN, add them to CSP too
     //- script(src='https://cdn.jsdelivr.net/npm/axios@1.13.2/dist/axios.min.js')
-    
+
+    //- script(src='https://js.stripe.com/v3/')
     script(type="module" src='/js/index.js')
